--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 
 .bgBlur {
-    background: rgba(6, 37, 41, 0.384);
+    background: rgba(4, 23, 26, 0.507);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
 }
@@ -43,7 +43,7 @@
 /* Skeleton Loader */
 .skeleton-panel {
     width: 800px;
-    height: 200px;
+    height: 240px;
     padding: 15px;
     border: thin solid #e6e6e6;
     border-radius: 10px;
@@ -179,3 +179,12 @@
     }
 }
 
+/* remove increment and decrement input button */
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type=number] {
+    -moz-appearance: textfield;
+}
