Style: add scroll bar styles

--- a/components/autocomplete/autocomplete.css
+++ b/components/autocomplete/autocomplete.css
@@ -26,5 +26,29 @@
     font-size: smaller;
   }
   
+  .scrollable-container {
+    /* Personalização para Firefox */
+    scrollbar-width: thin; 
+    scrollbar-color: #888 #f1f1f1;
+    overflow: auto; 
+  }
+  
+  /* Personalização para Webkit (Chrome, Safari, Edge) */
+  .scrollable-container::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .scrollable-container::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  .scrollable-container::-webkit-scrollbar-thumb {
+    background: #888; /* Cor da parte rolante da barra de rolagem */
+  }
+  
+  .scrollable-container::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Cor ao passar o mouse */
+  }
+  
   
  
